[gd_scene load_steps=3 format=2]

[ext_resource path="res://LabelProgramParts/LabelTopBar.gd" type="Script" id=1]
[ext_resource path="res://Themes/KolacheTheme.tres" type="Theme" id=3]

[node name="TopBar" type="ColorRect"]
anchor_right = 1.0
offset_right = -24.0
offset_bottom = 50.0
custom_minimum_size = Vector2( 0, 60 )
size_flags_horizontal = 3
color = Color( 0.207843, 0.207843, 0.207843, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1000.0
offset_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 75.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 75, 0 )
theme = ExtResource( 3 )
text = "< Back"

[node name="QuickEditButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 79.0
offset_right = 179.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 100, 0 )
theme = ExtResource( 3 )
text = "Quick Edit"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 183.0
offset_right = 854.0
offset_bottom = 52.0
size_flags_horizontal = 3

[node name="IndexToggle" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 858.0
offset_right = 1000.0
offset_bottom = 52.0
custom_minimum_size = Vector2( 75, 0 )
theme = ExtResource( 3 )
toggle_mode = true
text = "  Index Mode: OFF  "

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 56.0
offset_right = 1000.0
offset_bottom = 60.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuickEditButton" to="." method="_on_QuickEditButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/QuickEditButton" to="." method="_on_QuickEditButton_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/IndexToggle" to="." method="_on_IndexToggle_toggled"]
